results/SVCOMP/specgen/log-StringValueOf06-2024_03_03_07_30_40.txt
public class StringValueOf06 {
  /*@ public normal_behavior
    @    requires (int)Character.MIN_VALUE <= integerValue && integerValue <= (int)Character.MAX_VALUE;
    @    ensures \result <==> tmp.equals("77"); @*/
  public static boolean f(int integerValue) {
    String tmp = String.valueOf(integerValue);
    return tmp.equals("77");
  }
}
/home/max/Documents/JMLGPT/tmp/StringValueOf06.java:4: error: cannot find symbol
    @    ensures \result <==> tmp.equals("77"); @*/
                              ^
  symbol:   variable tmp
  location: class StringValueOf06
1 error

public class StringValueOf06 {
  /*@ public normal_behavior
    @    requires (int)Character.MIN_VALUE <= integerValue && integerValue <= (int)Character.MAX_VALUE;
    @    ensures \result <==> String.valueOf(integerValue).equals("77"); @*/
  public static boolean f(int integerValue) {
    return String.valueOf(integerValue).equals("77");
  }
}

